--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Wash Management System</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="Professional car wash business management system with role-based access control" />
     <meta name="author" content="Car Wash Pro" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
