--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetaLog - Smart Vehicle Logging Platform</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="description" content="Professional car wash business management system with role-based access control" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="description" content="PetaLog: Your professional business management system, featuring robust role-based access control to streamline operations across your car care, godown, crusher, or fuel station." />
     <meta name="author" content="Car Wash Pro" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta property="og:title" content="PetaLog - Smart Vehicle Logging Platform" />
-    <meta property="og:description" content="Professional car wash business management system with role-based access control" />
+    <meta property="og:description" content="PetaLog: Your professional business management system, featuring robust role-based access control to streamline operations across your car care, godown, crusher, or fuel station." />
     <meta property="og:type" content="website" />
   </head>
   <body>
